# FPM

./: CMakeLists.txt  README.md
Dataset/: CC.txt
configuration/: types.h
graph/: graph.cpp  graph.h
matching/: CMakeLists.txt  EvaluateQuery.cpp  EvaluateQuery.h  FPM.cpp  FPMBase.cpp  FilterVertices.cpp  FilterVertices.h  GenerateFilteringPlan.cpp  GenerateFilteringPlan.h  GenerateQueryPlan.cpp  GraphConverter.cpp  StudyPerformance.cpp  StudyPerformance_old_sys_cal.cpp  StudyPerformance_thread.cpp  matchingcommand.cpp  matchingcommand.h
matching/_/: StudyPerformance.cmp_init  StudyPerformance.cpp_bk  StudyPerformance.cpp_bk_fast  StudyPerformance.cpp_success  StudyPerformance.match_st2  StudyPerformance.mmmmmmmm  StudyPerformance_base  StudyPerformance_re_use  bk  bk2
q/1/: q0 copy.txt  q0.txt  q1.txt  q2.txt  q3.txt  q4.txt  q4bk.txt  q5.txt
utility/: graphoperations.cpp
utility/han/: intersection_algos.cpp
